--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,9 +51,10 @@ select{
 .content {
   position:fixed;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.788);
   color: #f1f1f1;
-  width: 100%;
   padding: 20px;
+  left: 0; right: 0;
+  
 
 }
